Oct 5, 2013 - chris ---------------------------------------------------
o Integrating "ham_bench" tool for benchmarking and testing

Sep 23, 2013 - chris ---------------------------------------------------
o Introducing "types" for the btree; the default type is HAM_TYPE_BINARY,
	additional types are HAM_TYPE_CUSTOM, HAM_TYPE_UINT32 etc. The types
	influence the internal btree layout.
o ham_db_set_compare_func is only allowed if the key type is HAM_TYPE_CUSTOM;
	otherwise, an error is returned

Sep 13, 2013 - chris ---------------------------------------------------
o The btree now has relaxed rules regarding merging/shifting after delete;
	if a node is less than 20% full it will trigger an SMO (previously:
	50%), and shifts only happen if both pages have a sufficiently
	different size
o For consistency reasons, some macros were renamed:
	HAM_PARAM_CACHESIZE -> HAM_PARAM_CACHE_SIZE
	HAM_PARAM_PAGESIZE -> HAM_PARAM_PAGE_SIZE
	HAM_PARAM_KEYSIZE -> HAM_PARAM_KEY_SIZE

Sep 01, 2013 - chris ---------------------------------------------------
o issue 27: No longer enabling AES encryption if openssl headers
	are missing

Aug 27, 2013 - chris ---------------------------------------------------
o Renamed HAM_DISABLE_VAR_KEYLEN to HAM_DISABLE_VARIABLE_KEYS to improve
	consistency
o Renamed HAM_ENABLE_DUPLICATES to HAM_ENABLE_DUPLICATE_KEYS to improve
	consistency

Aug 25, 2013 - chris ---------------------------------------------------
o Persistent freelist statistics data is now endian clean

Aug 22, 2013 - chris ---------------------------------------------------
o Cleaned up the configure.ac script
o Cleaned up the file format; the new format is no longer compatible.
	See the README file for more information and how to upgrade.
o Cleaned up the configure.ac script

Aug 23, 2013 - chris ---------------------------------------------------
                      release of hamsterdb-2.1.2

Aug 21, 2013 - chris ---------------------------------------------------