@@ -40,6 +40,11 @@ class BerkeleyDatabase : public Database
       return ("berkleydb");
     }
 
+    // Returns true if the database is currently open
+    virtual bool is_open() const {
+      return (m_db != 0);
+    }
+
     // Fills |metrics| with additional metrics
     virtual void get_metrics(Metrics *metrics, bool live = false);
 
